Adding New Perks to page

--- a/_includes/EmployeePerks.html
+++ b/_includes/EmployeePerks.html
@@ -1,6 +1,6 @@
 <section id="perkstitles">
     <h2>External Perks</h2>
-    <p>Here you'll find a list of the perks that come with being an Acklener/Hero.</p>
+    <p>Here you'll find a list of the perks that come with being an Acklener.</p>
 
 </section>
 <section id="perks">
@@ -8,7 +8,7 @@
 		<div class="card">
 			<div class="front">
 				<div class="card-img">
-                    <h1>20%</h1>
+                    <h1 class="card-text-title">20%</h1>
 					<p>Off Rooms and Co-work</p>
 				</div>
 				<div class="card-body">
@@ -74,7 +74,7 @@
 		<div class="card">
 			<div class="front">
 				<div class="card-img">
-					<h1>20%</h1>
+					<h1 class="card-text-title">20%</h1>
 					<p>Off Meeting Rooms</p>
 				</div>
 				<div class="card-body">
@@ -82,8 +82,44 @@
 				</div>
 			</div>
 			<div class="back">
-				<p class="p-backcard">Nuevos Horizontes Business Center offers Acklen Avenue employees a discount on coworking spaces.
+				<p class="p-backcard">Nuevos Horizontes Business Center offers Acklen Avenue employees' a discount on coworking spaces.
 					<br><a href="http://nuevoshorizontes.com/businesscenter/" target="_blank">Go to Webpage</a>
+				</p>
+			</div>
+		</div>
+    </div>
+	<div class="card-container">
+		<div class="card">
+			<div class="front">
+				<div class="card-img-cafeelgringo">
+					<h1 class="card-text-title">10%</h1>
+					<p>Off in all purchases</p>
+				</div>
+				<div class="card-body">
+					<img class="cafegringo-img" src="/img/perks/cafeelgringo-logo.png" alt="Cafe el Gringo Logo" >
+				</div>
+			</div>
+			<div class="back">
+				<p class="p-backcard">Offering all of our Employees' a 10% discount in all purchases.
+					<br><a href="https://www.facebook.com/cafeelgringo/" target="_blank">Go to Webpage</a>
+				</p>
+			</div>
+		</div>
+    </div>
+	<div class="card-container">
+		<div class="card">
+			<div class="front">
+				<div class="card-img">
+					<h1 class="card-text-title">10%</h1>
+					<p>Off in lodgings</p>
+				</div>
+				<div class="card-body">
+					<img class="" src="/img/perks/ddbrewery-logo.png" alt="Cafe el Gringo Logo" >
+				</div>
+			</div>
+			<div class="back">
+				<p class="p-backcard">Offering all of our Employees' a 10% discount on lodgings on weekdays 
+					<br><a href="https://ddbrewery.com/" target="_blank">Go to Webpage</a>
 				</p>
 			</div>
 		</div>
@@ -91,7 +127,7 @@
 </section>
 <section id="perkstitles">
     <h2>Internal Perks</h2>
-    <p>Ackleners and Heroes also get these Perks exclusively offered from us to you. </p>
+    <p>Ackleners also get these Perks exclusively offered from us to you. </p>
 </section>
 <section id="perks">
     <div class="card-container">
@@ -191,7 +227,7 @@
     </div>
 </section>
 
-<section id="perkstitles">
+<section id="download-perks">
 	<h3 class="h3-download">Download the Perks document for full information</h3>
 	<a class="btn btn--apple" data-modal="modal-13" href="https://drive.google.com/file/d/16RaVyeY-Xu7oOkrpHasLc9Ak9phUo9uG/view?usp=sharing" target="_blank">Employee Perks</a><br><br>
 </section> 
