--- a/_sass/_perks.sass
+++ b/_sass/_perks.sass
@@ -59,7 +59,7 @@
     border-top-right-radius: 8px
     background: $apple-green
     height: 170px
-    margin-bottom: 50px
+    margin-bottom: 25px
     overflow: hidden
     &::after
       content: ""
@@ -126,6 +126,13 @@
     font-size: $title
     color: $apple-green
 
+#download-perks
+  max-width: 1100px
+  margin: 0 auto
+  padding: 60px 5% 80px
+  text-align: center
+  color: $black-80
+  
 .card-icon
   max-height: 132px
   max-width:  238px
@@ -141,3 +148,13 @@
 .h3-download
   padding: 2rem
 
+.card-text-title
+  padding-top: .2em
+
+.card-img-cafeelgringo
+  margin-bottom: 0 !important
+  @extend .card-img
+
+.cafegringo-img
+  max-width: 10rem
+  max-height: 10em
