--- a/_sass/_jobs.sass
+++ b/_sass/_jobs.sass
@@ -1,3 +1,5 @@
+@import "https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css"
+
 #jobs
   width: 100%
   margin: 0 auto
@@ -83,6 +85,12 @@
     margin: 0 auto
     padding: 40px 25px
     text-align: left
+
+#mc_embed_signup
+  background: #fff
+  clear:left
+  font: 14px Helvetica,Arial,sans-serif
+  width:100%
 
 @media (min-width: $screen-xm-min) and (max-width: $screen-sm-min)
   #jobs
