--- a/_includes/jobBoard-include.html
+++ b/_includes/jobBoard-include.html
@@ -46,3 +46,15 @@
         {% endfor %}
     {% endif %}
 </section>
+
+<div id=“mc_embed_signup”>
+<form action=“https://acklenavenue.us1.list-manage.com/subscribe/post?u=efc1a5d601993744de7164a04&amp;id=8219ea662d” method=“post” id=“mc-embedded-subscribe-form” name=“mc-embedded-subscribe-form” class=“validate” target=“_blank” novalidate>
+    <div id=“mc_embed_signup_scroll”>
+	<label for=“mce-EMAIL”>Subscribe</label>
+	<input type=“email” value=“” name=“EMAIL” class=“email” id=“mce-EMAIL” placeholder=“email address” required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style=“position: absolute; left: -5000px;” aria-hidden=“true”><input type=“text” name=“b_efc1a5d601993744de7164a04_8219ea662d” tabindex=“-1" value=“”></div>
+    <div class=“clear”><input type=“submit” value=“Subscribe” name=“subscribe” id=“mc-embedded-subscribe” class=“button”></div>
+    </div>
+</form>
+</div>
