--- a/_sass/_jobs.sass
+++ b/_sass/_jobs.sass
@@ -88,9 +88,9 @@
 
 #mc_embed_signup
   background: #fff
-  clear:left
-  font: 14px Helvetica,Arial,sans-serif
-  width:100%
+  clear: left
+  font-size: 14px
+  width: 100%
 
 @media (min-width: $screen-xm-min) and (max-width: $screen-sm-min)
   #jobs
