--- a/_includes/jobBoard-include.html
+++ b/_includes/jobBoard-include.html
@@ -48,6 +48,8 @@
 	
 	<div class="jobPost">
 		<div id="mc_embed_signup">
+			<h6>Don't miss the latest news</h6>
+			<h3>Join Our Monthly Newsletter</h3>
 			<form action="https://acklenavenue.us1.list-manage.com/subscribe/post?u=efc1a5d601993744de7164a04&amp;id=8219ea662d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 				<div id="mc_embed_signup_scroll">
 				<label for="mce-EMAIL">Subscribe</label>
