--- a/_sass/_jobs.sass
+++ b/_sass/_jobs.sass
@@ -91,6 +91,9 @@
   clear: left
   font-size: 14px
   width: 100%
+  
+  .newsletter-title
+     text-align: center
 
 @media (min-width: $screen-xm-min) and (max-width: $screen-sm-min)
   #jobs
